--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2"
+version: "3"
 services:
   mariadb:
     image: mariadb
@@ -9,6 +9,9 @@ services:
     #   - "./mariadb/data:/var/lib/mysql"
     environment:
       - MYSQL_ROOT_PASSWORD=r00tP@sSw0rd
+    healthcheck:
+      test: ["CMD", "mysql", "-u", "root", "-e", "SELECT true AS health"]
+
   postgres:
     image: postgres
     ports:
@@ -18,6 +21,9 @@ services:
     #   - "./postgres/data:/var/lib/postgresql/data"
     environment:
       - POSTGRES_PASSWORD=r00tP@sSw0rd
+    healthcheck:
+      test: ["CMD", "pg_isready"]
+
   sqlserver:
     image: microsoft/mssql-server-linux:2017-latest
     ports:
@@ -28,3 +34,5 @@ services:
     environment:
       - ACCEPT_EULA=Y
       - MSSQL_SA_PASSWORD=r00tP@sSw0rd
+    healthcheck:
+      test: ["CMD", "/opt/mssql-tools/bin/sqlcmd", "-U", "sa", "-P", "r00tP@sSw0rd", "-Q", "SELECT CAST(1 AS BIT) AS health"]
